--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -1,256 +1,42 @@
 @import '../../scss/global';
-.header {
+
+a, .nav-link, .btn-link {
   color: $black;
-  display: block;
-  height: $topNavHeight;
-  line-height: $topNavHeight;
-  vertical-align: middle;
-  width: 100%;
+  text-decoration: none;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
+.btn-height {
+  line-height:1.3;
+}
+.form-control-sm {
+  height: 24px;
+  position: relative;
+}
+.search-icon {
+  top: 18px;
+  position: absolute;
+  left: 420px;
+  color: $shuttleGray;
   @include media(tablet) {
-    width: 100%;
+    left: 200px;
   }
   @include media(mediumDesktop) {
-    width: 958px;
+    left: 360px;
   }
-  @include media(largeDesktop) {
-    width: 990px;
-  }
-  .header__nav {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    @include media(tablet) {
-      display: flex;
-      flex-direction: colummn;
-    }
-    @include media(mediumDesktop) {
-      display: block;
-    }
-    @include media(largeDesktop) {
-      display: block;
-    }
-    a {
-      color: $black;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-    .header__search {
-      display: block;
-      order: 2;
-      padding-left: 0;
-      padding-top: 10px;
-      position: relative;
-      width: 100%;
-      .search-icon {
-        color: $shuttleGray;
-        position: absolute;
-        right: -5px;
-        top: 20px;
-        z-index: 1;
-      }
-      input[type='text'] {
-        @include make-text-input(300px, 1.5em, 1em, 1em);
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-      }
-      @include media(tablet) {
-        display: block;
-        order: 2;
-        padding-left: 5px;
-        width: 100%;
-        input[type='text'] {
-          @include make-text-input(130px, 1.5em, 1em, 1em);
-          margin-left: auto;
-          margin-right: auto;
-        }
-      }
-      @include media(mediumDesktop) {
-        float: left;
-        margin-top: 10px;
-        padding-left: 0;
-        width: 180px;
-        input[type='text'] {
-          @include make-text-input(165px, 1.5em, 1em, 1em);
-        }
-      }
-      @include media(largeDesktop) {
-        float: left;
-        margin-top: 10px;
-        padding-left: 5px;
-        width: 180px;
-        input[type='text'] {
-          @include make-text-input(165px, 1.5em, 1em, 1em);
-        }
-      }
-    }
-    .header__links {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      order: 1;
-      width: 100%;
-      @include media(tablet) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        order: 1;
-        width: 100%;
-      }
-      @include media(mediumDesktop) {
-        float: left;
-        padding-top: 10px;
-        width: 773px;
-      }
-      @include media(largeDesktop) {
-        float: left;
-        padding-top: 10px;
-        width: 757px;
-      }
-      .nav-links {
-        list-style-type: none;
-        width: 100%;
-        .nav-item {
-          display: block;
-          margin-bottom: 10px;
-          padding-left: 10px;
-          padding-right: 0;
-          text-align: left;
-          vertical-align: middle;
-          @include media(tablet) {
-            display: block;
-            margin-bottom: 10px;
-            padding-left: 10px;
-            padding-right: 0;
-            text-align: left;
-            width: 100%;
-          }
-          @include media(mediumDesktop) {
-            display: inline-block;
-            padding-left: 10px;
-            padding-right: 10px;
-            text-align: center;
-            width: auto;
-          }
-          @include media(largeDesktop) {
-            display: inline-block;
-            padding-left: 15px;
-            padding-right: 15px;
-            text-align: center;
-            width: auto;
-          }
-          .btn-link {
-            color: $black;
-            line-height: inherit;
-            padding: 0;
-          }
-          .profile-icon {
-            padding-right: 5px;
-          }
-          .dropdown-toggle {
-            cursor: pointer;
-            display: inline-block;
-            &:hover
-            &:active {
-              text-decoration: underline;
-            }
-            &[aria-expanded='true'] {
-              background-color: $iron;
-            }
-            margin-top: -4px; /* should only target nav dropdown li */
-          }
-          .dropdown {
-            .dropdown-menu {
-              left: -45px !important;
-              top: 20px;
-              text-align: center;
-              div {
-                display: inline-block;
-                  height: 30px;
-                  margin-bottom: 0;
-                  margin-top: 0;
-                  padding-bottom: 0;
-                  padding-left: 10px;
-                  padding-right: 10px;
-                  padding-top: 0;
-                @include media(tablet) {
-                  display: inline-block;
-                  height: 30px;
-                  margin-bottom: 0;
-                  margin-top: 0;
-                  padding-bottom: 0;
-                  padding-left: 10px;
-                  padding-right: 10px;
-                  padding-top: 0;
-                }
-                @include media(mediumDesktop) {
-                  display: block;
-                  padding-left: 0;
-                  padding-right: 0;
-                }
-                @include media(largeDesktop) {
-                  display: block;
-                  padding-left: 0;
-                  padding-right: 0;
-                }
-              }
-            }
-          }
-          .secondary-dropdown-menu {
-            background-color: $dustyGray;
-            margin: 0;
-            padding: 0;
-            &.profile {
-              height: 40px;
-              @include media(mediumDesktop) {
-                border-top: 0;
-                margin: 0;
-                padding: 0;
-                top: 60px;
-                height: auto;
-              }
-              @include media(largeDesktop) {
-                border-top: 0;
-                margin: 0;
-                padding: 0;
-                top: 60px;
-                height: auto;
-              }
-            }
-            &.tools {
-              height: auto;
-              @include media(mediumDesktop) {
-                border-top: 0;
-                margin: 0;
-                padding: 0;
-                top: 60px;
-                height: auto;
-              }
-              @include media(largeDesktop) {
-                border-top: 0;
-                margin: 0;
-                padding: 0;
-                top: 60px;
-                height: auto;
-              }
-            }
-            div {
-              @include media(mediumDesktop) {
-                height: 40px !important;
-                line-height: 40px;
-              }
-              @include media(largeDesktop) {
-                height: 40px !important;
-                line-height: 40px;
-              }
-            }
-          }
-        } // .nav-item
-      } // .nav-links
-    } // .header__links
-    @include clearfix();
-  } // .header__nav
-} // .header
+}
+.dropdown-menu {
+  left: -60px !important;
+}
+.dropdown-item, a.dropdown-item {
+  width: 72% !important;
+}
+.dropdown-item:hover {
+  color: white;
+  background-color: $mercury;
+}
+.secondary-dropdown-menu {
+  background-color: $mercury;
+}
