--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -1,135 +1,113 @@
-<div class="header">
-    <div class="header__nav">
-      <div class="header__search mr-5">
-        <i class="search-icon" aria-hidden="true"></i>
-        <input
-          type="text"
-          name="search"
-          class="search-input"
-          placeholder="Search for..."
-        />
-      </div>
-      <div class="header__links">
-        <ul class="nav navbar-nav nav-links">
-          <li class="nav-item">
-            <a [routerLink]="['/dashboard']">
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a [routerLink]="['/reports']">
-              Reports
-            </a>
-          </li>
-          <li class="nav-item">
-            <a [routerLink]="['/contributors']">
-              Contributors
-            </a>
-          </li>
-          <li class="nav-item">
-            <div
-              class="d-inline-block"
-              ngbDropdown
-              placement="bottom-left"
-            >
-              <button
-                type="button"
-                class="btn btn-link dropdown-toggle"
-                id="dropdownMenu"
-                [ngClass]="{ 'toggleMenuLink' : menuActive === true }"
-                (click)="toggleMenu()"
-                ngbDropdownToggle
-              >
-              Tools
-              </button>
+<nav class="navbar navbar-expand-lg float-right">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav float-right">
+        <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/dashboard']">
+                Dashboard
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/reports']">
+                Reports
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/contributors']">
+                Contributors
+              </a>
+            </li>
+  
+            <li class="nav-item dropdown">
               <div
-                class="secondary-dropdown-menu tools"
-                aria-labelledby="dropdownMenu"
-                ngbDropdownMenu
+                class="d-inline-block"
+                ngbDropdown
+                placement="bottom-left"
               >
-                <div>
-                  <a [routerLink]="['/tools_import_transactions']">
-                    Import Transactions
-                  </a>
+                <button
+                  type="button"
+                  class="btn btn-link btn-height dropdown-toggle"
+                  id="dropdownTools"
+                  [ngClass]="{ 'toggleMenuLink' : menuActive === true }"
+                  (click)="toggleMenu()"
+                  ngbDropdownToggle
+                >
+                Tools
+                </button>
+                <div
+                  class="secondary-dropdown-menu tools"
+                  aria-labelledby="dropdownTools"
+                  ngbDropdownMenu
+                >
+                  
+                    <a class="dropdown-item" [routerLink]="['/tools_import_transactions']">
+                      Import Transactions
+                    </a>
+                    <a class="dropdown-item" [routerLink]="['/tools_import_names']">
+                      Import Names
+                    </a>
+  
+                    <a class="dropdown-item" [routerLink]="['/tools_export_names']">
+                      Export Names
+                    </a>
+  
+                      <a class="dropdown-item" [routerLink]="['/tools_merge_names']">
+                      Merge Names
+                    </a>
+                      <a class="dropdown-item" [routerLink]="['/tools_create_backup']">
+                      Create Backup
+                      </a>
                 </div>
-                <div>
-                  <a [routerLink]="['/tools_import_names']">
-                    Import Names
-                  </a>
-                </div>
-                <div>
-                  <a [routerLink]="['/tools_export_names']">
-                    Export Names
-                  </a>
-                </div>
-                <div>
-                    <a [routerLink]="['/tools_merge_names']">
-                    Merge Names
-                  </a>
-                </div>
-                <div>
-                    <a [routerLink]="['/tools_create_backup']">
-                    Create Backup
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">
+                <i class="notifications-icon icon"></i>
+                Notifications
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <div
+                class="d-inline-block"
+                ngbDropdown
+                placement="bottom-left"
+              >
+                <button
+                  type="button"
+                  class="btn btn-link btn-height dropdown-toggle"
+                  id="dropdownProfile"
+                  [ngClass]="{ 'toggleMenuLink' : menuActive === true }"
+                  (click)="toggleMenu()"
+                  ngbDropdownToggle
+                >
+                  <i class="profile-icon icon" aria-hidden="true"></i>
+                  Profile
+                </button>
+                <div
+                  class="secondary-dropdown-menu profile"
+                  aria-labelledby="dropdownProfile"
+                  ngbDropdownMenu
+                >
+                    <a class="dropdown-item" [routerLink]="['/account']">
+                      Account
+                    </a>
+                    <a class="dropdown-item" [routerLink]="['/users']">
+                      Users
+                    </a>
+                    <a class="dropdown-item" [routerLink]="['/settings']">
+                      Settings
+                    </a>
+                    <a class="dropdown-item" [routerLink]="['/logout']">
+                      Logout
                     </a>
                 </div>
               </div>
-            </div>
-          </li>
-          <li class="nav-item">
-            Help
-          </li>
-          <li class="nav-item">
-            <a class="icon-link" role="button">
-              <i class="notifications-icon icon" aria-hidden="true"></i>
-              <span class="ico n-link-text">Notifications</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <div
-              class="d-inline-block"
-              ngbDropdown
-              placement="bottom-left"
-            >
-              <button
-                type="button"
-                class="btn btn-link dropdown-toggle"
-                id="dropdownMenu"
-                [ngClass]="{ 'toggleMenuLink' : menuActive === true }"
-                (click)="toggleMenu()"
-                ngbDropdownToggle
-              >
-                <i class="profile-icon icon" aria-hidden="true"></i>
-                Profile
-              </button>
-              <div
-                class="secondary-dropdown-menu profile"
-                aria-labelledby="dropdownMenu"
-                ngbDropdownMenu
-              >
-                <div>
-                  <a [routerLink]="['/account']">
-                    Account
-                  </a>
-                </div>
-                <div>
-                  <a [routerLink]="['/users']">
-                    Users
-                  </a>
-                </div>
-                <div>
-                  <a [routerLink]="['/settings']">
-                    Settings
-                  </a>
-                </div>
-                <div>
-                  <a [routerLink]="['/logout']">
-                    Logout
-                  </a>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul> <!-- ./nav-links -->
-      </div> <!-- ./header__links -->
-    </div> <!-- ./header__nav -->
-  </div> <!-- ./header -->
+            </li>
+      </ul>
+    </div>
+  </nav>
