--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -4,9 +4,19 @@
   margin-left: auto;
   margin-right: auto;
   min-height: 500px;
-  position: relative;  
+  position: relative;
   .search-field-container {
     padding: 5px 15px 0 15px;
+    position: relative;
+    .input-group {
+      .input-group-append {
+        .input-group-text {
+          .search-icon {
+            left: 205px !important;
+          }
+        }
+      }
+    }
   }
   section {
     .form-sidebar__links {
