get trx by report id

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -156,7 +156,7 @@
                 </button>
                 <a
                   class="btn btn-previous btn-right"
-                  [routerLink]="['/forms/transactions', '3X']"
+                  [routerLink]="['/forms/transactions', formType, 1206963]"
                 >
                   View Transactions
                 </a>
