Fne 880 sprint12 mahendra (#485)
* FNE_880 changes and bug fixing

FNE_880 changes and bug fixing

* FNE_880 and bug fixing changes

* FNE 888 and bug fixing

FNE 888 and bug fixing

* FNE 880 and bug fixing

FNE 880 and bug fixing

* FNE 880 and bug fixing

FNE 880 and bug fixing

* FNE 880 and bug fixing

FNE 880 and bug fixing

* FNE 880 ang bug fixing

FNE 880 ang bug fixing

* FNE 880 and bug fixing

* FNE_880 and bug fixing

* FNE 880 and bug fuxing changes

FNE 880 and bug fuxing changes

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -26,6 +26,7 @@
           }
         }
         .dropdown-menu {
+          min-width: 0px !important;
           &.show {
             .dropdown-item {
               &:focus,
