--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -58,7 +58,7 @@
               {{ formEndDate | date: 'MM/dd/yyyy' }}
             </div>
             <div>
-              Due in {{ formDaysUntilDue }} days
+              Due in {{ formDaysUntilDue }} days ({{dueDate | date: 'MM/dd/yyyy'}})
               <a class="btn btn-link btn-edit" (click)="editFrom()">
                 <i class="edit-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click to edit date.</span>
