--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -26,6 +26,7 @@
           }
         }
         .dropdown-menu {
+          min-width: 0px !important;
           &.show {
             .dropdown-item {
               &:focus,
