--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -24,15 +24,10 @@
         id="navbarSupportedContent"
         [ngClass]="{ toggleMenuStyle: toggleMenu === true }"
       >
-      <div class="form-group ml-1 mt-2">
-          <input
-            type="text"
-            name="search"
-            class="form-control-sm"
-            placeholder="Search for..."
-          />
+        <div class="form-group ml-1 mt-2">
+          <input type="text" name="search" class="form-control-sm" placeholder="Search for..." />
           <i class="search-icon" aria-hidden="true"></i>
-      </div>
+        </div>
         <app-header class="container"></app-header>
       </div>
     </nav>
@@ -58,7 +53,7 @@
               {{ formEndDate | date: 'MM/dd/yyyy' }}
             </div>
             <div>
-              Due in {{ formDaysUntilDue }} days ({{dueDate | date: 'MM/dd/yyyy'}})
+              Past due in {{ formDaysUntilDue }} days ({{ dueDate | date: 'MM/dd/yyyy' }})
               <a class="btn btn-link btn-edit" (click)="editFrom()">
                 <i class="edit-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click to edit date.</span>
