filters API integration

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -78,7 +78,8 @@
                 <div class="input-group-append" (click)="search()"
                     ngbTooltip="Search All" tooltipClass="form-tooltip">
                   <span class="input-group-text" id="">
-                    <i class="search-icon text-grey" aria-hidden="true"></i>
+                    <!-- <i class="search-icon text-grey" aria-hidden="true"></i> no longer working?-->
+                    <i class="fas fa-search text-grey" aria-hidden="true"></i>
                   </span>
                 </div>
               </div>              
