--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -82,6 +82,9 @@
       width: 27%;
       float: right;
       margin-right: 5px;
+      .search-icon {
+        
+      }
     }
 
     .transactions__trx-applied-filter-row {
