--- a/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
+++ b/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
@@ -18,7 +18,8 @@
               placeholder="Search Type" aria-label="Search">
             <div class="input-group-append" (click)="scrollToType()">
               <span class="input-group-text">
-                <i class="search-icon text-grey" aria-hidden="true"></i>
+                  <!-- <i class="search-icon text-grey" aria-hidden="true"></i> no longer working?-->
+                  <i class="fas fa-search text-grey" aria-hidden="true"></i>
               </span>
             </div>              
           </div>            
