--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
           <p></p>
         </div>
         <div class="col">
-          <h3 class="pb-3 pt-3 border-bottom">Recently Saved & Submitted Reports</h3>
+          <h3 class="pb-3 pt-3">Recently Saved & Submitted Reports</h3>
           <table class="table table-striped forms-table">
             <thead>
               <tr>
