--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -34,9 +34,6 @@
               <div class="form-group">
                 <label for="{{ col.name }}">
                   {{ col.text }}
-                  <ng-container *ngIf="col?.validation?.required">
-                    *
-                  </ng-container>
                   <button
                     type="button"
                     class="btn btn-info"
@@ -56,11 +53,33 @@
                           <i [class]="col.inputIcon" aria-hidden="true"></i>
                         </span>
                       </div>
-                      <input class="form-control" [type]="col.type" [name]="col.name" [formControlName]="col.name" />
+                      <input
+                        class="form-control"
+                        [type]="col.type"
+                        [name]="col.name"
+                        [formControlName]="col.name"
+                        [ngClass]="
+                          frmIndividualReceipt.get(col.name).invalid &&
+                          (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                            ? 'input-field-error'
+                            : ''
+                        "
+                      />
                     </div>
                   </ng-container>
                   <ng-container *ngIf="!col.inputGroup">
-                    <input class="form-control" [type]="col.type" [name]="col.name" [formControlName]="col.name" />
+                    <input
+                      class="form-control"
+                      [type]="col.type"
+                      [name]="col.name"
+                      [formControlName]="col.name"
+                      [ngClass]="
+                        frmIndividualReceipt.get(col.name).invalid &&
+                        (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                          ? 'input-field-error'
+                          : ''
+                      "
+                    />
                   </ng-container>
                   <div
                     class="error-text"
@@ -98,7 +117,16 @@
                   <textarea class="form-control" rows="5" name="{{ col.name }}" [formControlName]="col.name"></textarea>
                 </ng-container>
                 <ng-container *ngIf="col.type === 'select' && col.name === 'ContributorState'">
-                  <ng-select class="state-select" [formControlName]="col.name">
+                  <ng-select
+                    class="state-select"
+                    [formControlName]="col.name"
+                    [ngClass]="
+                      frmIndividualReceipt.get(col.name).invalid &&
+                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                        ? 'input-field-error'
+                        : ''
+                    "
+                  >
                     <ng-option *ngFor="let item of states" [value]="item.code">
                       {{ item.name }}
                     </ng-option>
