--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
@@ -75,3 +75,22 @@
     }
   }
 }
+.dropdown-menu {
+  min-width: 0px !important;
+  &.show {
+    .dropdown-item {
+      &:focus,
+      &:hover,
+      &:active,
+      &:visited {
+        background-color: $white;
+        color: $black;
+        cursor: pointer;
+        outline: none;
+      }
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
