--- a/front-end/src/app/forms/form-99/type/type.component.scss
+++ b/front-end/src/app/forms/form-99/type/type.component.scss
@@ -100,6 +100,7 @@
             }
           }
           .type-text {
+            font-family: $mainFontFamily;
             display: inline-block;
             margin: 10px auto;
             position: relative;
