--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -4,7 +4,7 @@ a, .nav-link, .btn-link {
   color: $black;
   text-decoration: none;
   &:hover {
-    color: white;
+    color: $white;
     text-decoration: none;
   }
 }
