--- a/front-end/src/app/dashboard/dashboard.component.scss
+++ b/front-end/src/app/dashboard/dashboard.component.scss
@@ -55,7 +55,7 @@
   }
   footer {
     .footer {
-      bottom: 0;
+      //bottom: 0;
       position: absolute;
       width: 100%;
       .legal-disclaimer {
