--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
@@ -3,6 +3,7 @@
 .report-type-sidebar {
   position: relative;
   height: 500px;
+  margin-bottom: .5em;
   // header {
   //   margin-bottom: 20px;
   // }
@@ -10,6 +11,7 @@
     .sidebar-form-content {
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: .5em;
       text-align: center;
       input[type='date'] {
         &.form-control {
@@ -38,7 +40,7 @@
   }
   footer {
     background-color: $mineShaft;
-    bottom: 0;
+    //bottom: 0;
     position: absolute;
     width: 100%;
     .form-sidebar__item {
