--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -60,7 +60,7 @@
   }
   footer {
     background-color: $mineShaft;
-    bottom: 0;
+    //bottom: 0;
     position: absolute;
     width: 100%;
     .form-sidebar__item {
