--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -132,7 +132,7 @@
       } // .content
     } // section
     footer {
-      bottom: 0;
+      //bottom: 0;
       position: relative;
       width: 100%;
       .forms__btn-container {
