FNE943 - additional fonts on preview/signee page

--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -155,7 +155,7 @@
       </div>
       </div>
       <div class="grid-row border-top">
-        <h4 class="grid-row__col grid-row__col--6 text-left">Text:</h4>
+        <label class="grid-row__col grid-row__col--6 text-left"><strong>Text:</strong></label>
         <div class="grid-row__col grid-row__col--6 text-right">
           <button
             type="button"
