--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -147,7 +147,7 @@
             <strong>Attachment:</strong>&nbsp;
           </label>
           <span *ngIf="orgFileUrl">
-            <a href="{{ orgFileUrl }}" target="_blank">{{ fileName }}</a>
+            <a style="background:#0AACFA; padding: .5em; border-radius: 1em" href="{{ orgFileUrl }}" target="_blank">{{ fileName }}</a>
           </span>
           <span *ngIf="!orgFileUrl">
             {{ fileName }}
