--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -119,6 +119,7 @@
                           background-color: $seaShell !important;
                         }
                         .child-options-label {
+                          font-family: $mainFontFamily;
                           padding-left: 10px;
                         }
                       }
