--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -86,6 +86,7 @@
         .options-list {
           list-style-type: none;
           .options-list__item {
+            font-family: $mainFontFamily;
             border-bottom: 1px solid $iron;
             border-top: 1px solid $iron;
             padding-bottom: 20px;
