--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -6,7 +6,7 @@
     (blur)="doValidateReportType()"
   >
     <header>
-      <div class="header-content">
+      <div class="header-content mb-3">
         <div class="float-left">
           <h1>
             Report Type
@@ -60,7 +60,7 @@
                   (change)="updateTypeSelected($event)"
                   formControlName="reportTypeRadio"
                 />
-                <label
+                <label class="child-options-label" style="font-family: Karla, sans-serif !important"
                   for="{{committeeReportType.report_type_desciption}}"
                 >
                 {{committeeReportType.report_type_desciption}}
