--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.scss
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.scss
@@ -32,6 +32,7 @@
         .options-list {
           list-style-type: none;
           .options-list__item {
+            font-family: $mainFontFamily !important;
             border-bottom: 1px solid $iron;
             border-top: 1px solid $iron;
             padding-bottom: 20px;
