--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -1,20 +1,11 @@
-
 <div class="report-type-container" *ngIf="!reportsLoading">
-    <form
-    [formGroup]="frmReportType"
-    (ngSubmit)="doValidateReportType()"
-    (blur)="doValidateReportType()"
-  >
+  <form [formGroup]="frmReportType" (ngSubmit)="doValidateReportType()" (blur)="doValidateReportType()">
     <header>
       <div class="header-content mb-3">
         <div class="float-left">
           <h1>
             Report Type
-            <button
-              type="button"
-              class="btn-info"
-              ngbTooltip="Language will be provided by RAD"
-            >
+            <button type="button" class="btn-info" ngbTooltip="Language will be provided by RAD">
               <i class="info-icon" aria-hidden="true"></i>
               <span class="sr-only">
                 Click for more information
@@ -24,80 +15,75 @@
         </div>
       </div>
     </header>
-      <section>
-        <div class="form-content">
-          <div class="grid-row">
-            <div class="grid-row__col grid-row__col--12">
-              <div class="text-error text-center"
-                *ngIf="(frmReportType.invalid && (optionFailed))">
-                You must select a report type for filing.
-              </div>
-              <div class="text-error text-center"
-                *ngIf="((frmReportType.dirty || frmReportType.touched) && !optionFailed && (!fromDateSelected || !toDateSelected))">
-                You must select coverage dates.
-              </div>
-              <ng-template #nextErrors>
-                <div *ngIf="customFormValidation.error">
-                  <div class="text-error text-center"
-                    *ngFor="let message of customFormValidation.messages">
-                    {{ message }}
-                  </div>                 
-                </div>
-              </ng-template>
-            </div>
-          </div>
-            <ul class="options-list">
-              <li
-                class="options-list__item"
-                *ngFor="let committeeReportType of committeeReportTypes; let i = index;"
-              >
-                <input
-                  type="radio"
-                  name="reportTypeRadio"
-                  [value]="committeeReportType.report_type"
-                  [attr.data-report-type]="committeeReportType?.regular_special_report_ind"
-                  [attr.checked]="committeeReportType.report_type === reportTypeSelected"
-                  (change)="updateTypeSelected($event)"
-                  formControlName="reportTypeRadio"
-                />
-                <label class="child-options-label" style="font-family: Karla, sans-serif !important"
-                  for="{{committeeReportType.report_type_desciption}}"
-                >
-                {{committeeReportType.report_type_desciption}}
-                </label>
-                <button
-                  type="button"
-                  class="btn-info"
-                  ngbTooltip=" {{committeeReportType.report_type_info}}"
-
-                >
-                  <i class="info-icon" aria-hidden="true"></i>
-                  <span class="sr-only">
-                    Click for more information
-                  </span>
-                </button>
-              </li>
-            </ul>
-        </div>
-      </section>
-      <footer class="container-fluid">
+    <section>
+      <div class="form-content">
         <div class="grid-row">
-          <div class="grid-row__col grid-row__col--11 forms__btn-container">
-            <button
-              class="btn btn-previous btn-left"
-              type="button"
-              (click)="cancel()"
+          <div class="grid-row__col grid-row__col--12">
+            <div class="text-error text-center" *ngIf="(frmReportType.dirty || frmReportType.touched) && optionFailed">
+              You must select a report type for filing.
+            </div>
+            <div
+              class="text-error text-center"
+              *ngIf="
+                (frmReportType.dirty || frmReportType.touched) &&
+                !optionFailed &&
+                (!fromDateSelected || !toDateSelected)
+              "
             >
-              Cancel
-            </button>
-            <button
-              class="btn btn-primary btn-right"
-              type="submit"
-            >
-              Next
-            </button>
+              You must select coverage dates.
+            </div>
+            <div class="text-error text-center" *ngIf="(frmReportType.dirty || frmReportType.touched) && invalidDates">
+              Entered date is outside of the report coverage period. Please enter transactions for this coverage period
+              only.
+            </div>
+            <ng-template #nextErrors>
+              <div *ngIf="customFormValidation.error">
+                <div class="text-error text-center" *ngFor="let message of customFormValidation.messages">
+                  {{ message }}
+                </div>
+              </div>
+            </ng-template>
           </div>
         </div>
-      </footer>
-    </form>
-  </div>
+        <ul class="options-list">
+          <li class="options-list__item" *ngFor="let committeeReportType of committeeReportTypes; let i = index">
+            <input
+              type="radio"
+              name="reportTypeRadio"
+              [value]="committeeReportType.report_type"
+              [attr.data-report-type]="committeeReportType?.regular_special_report_ind"
+              [attr.checked]="committeeReportType.report_type === reportTypeSelected"
+              (change)="updateTypeSelected($event)"
+              formControlName="reportTypeRadio"
+            />
+            <label
+              class="child-options-label"
+              style="font-family: Karla, sans-serif !important"
+              for="{{ committeeReportType.report_type_desciption }}"
+            >
+              {{ committeeReportType.report_type_desciption }}
+            </label>
+            <button type="button" class="btn-info" ngbTooltip=" {{ committeeReportType.report_type_info }}">
+              <i class="info-icon" aria-hidden="true"></i>
+              <span class="sr-only">
+                Click for more information
+              </span>
+            </button>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer class="container-fluid">
+      <div class="grid-row">
+        <div class="grid-row__col grid-row__col--11 forms__btn-container">
+          <button class="btn btn-previous btn-left" type="button" (click)="cancel()">
+            Cancel
+          </button>
+          <button class="btn btn-primary btn-right" type="submit">
+            Next
+          </button>
+        </div>
+      </div>
+    </footer>
+  </form>
+</div>
