--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -126,11 +126,11 @@
           Summary
         </button>
       </div>
-      <div class="btn-row">
+      <!--<div class="btn-row">
         <button type="button" class="btn btn-secondary">
           Sign &amp; Submit
         </button>
-      </div>
+      </div>-->
     </div>
   </footer>
 </div>
