--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -109,6 +109,14 @@
                         Alphanumeric characters only.
                       </div>
                     </ng-container>
+                    <ng-container *ngIf="frmIndividualReceipt.get(col.name).errors">
+                      <div
+                        class="text-error text-left"
+                        *ngIf="frmIndividualReceipt.get(col.name).errors?.nonFloatingPoint"
+                      >
+                        Floating point numbers only.
+                      </div>
+                    </ng-container>
                   </div>
                 </ng-container>
                 <ng-container *ngIf="col.type === 'textarea'">
