--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -167,7 +167,8 @@
               <button class="btn btn-secondary btn-right" type="submit">
                 Save &amp; Add Transaction
               </button>
-              <a class="btn btn-previous btn-right" [routerLink]="['/forms/transactions', '3X']">
+              <!-- <a class="btn btn-previous btn-right" [routerLink]="['/forms/transactions', '3X']"> -->
+              <a class="btn btn-previous btn-right" (click)="viewTransactions()">
                 View Transactions
               </a>
             </div>
