--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -53,11 +53,12 @@
                       </div>
                       <input
                         class="form-control"
-                        [type]="col.type"
-                        [name]="col.name"
-                        [formControlName]="col.name"
+                        [type]="col?.type"
+                        [name]="col?.name"
+                        [formControlName]="col?.name"
+                        (change)="fieldChange($event)"
                         [ngClass]="
-                          frmIndividualReceipt.get(col.name)?.invalid &&
+                          frmIndividualReceipt.get(col?.name)?.invalid &&
                           (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                             ? 'input-field-error'
                             : ''
@@ -65,14 +66,15 @@
                       />
                     </div>
                   </ng-container>
-                  <ng-container *ngIf="!col.inputGroup && col.type !== 'hidden'">
+                  <ng-container *ngIf="!col.inputGroup">
                     <input
                       class="form-control"
-                      [type]="col.type"
-                      [name]="col.name"
-                      [formControlName]="col.name"
+                      [type]="col?.type"
+                      [name]="col?.name"
+                      [formControlName]="col?.name"
+                      (change)="fieldChange($event)"
                       [ngClass]="
-                        frmIndividualReceipt.get(col.name)?.invalid &&
+                        frmIndividualReceipt.get(col?.name)?.invalid &&
                         (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                           ? 'input-field-error'
                           : ''
