save edit transaction

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -121,7 +121,8 @@
       <app-transactions-edit
         *ngIf="isEditViewActive()"
         [transactionToEdit]="transactionToEdit"
-        formType="{{formType}}">
+        formType="{{formType}}"
+        reportId="{{reportId}}">
       </app-transactions-edit>
     </div>
   </div>
